--- a/src/frontend/styles/landing.scss
+++ b/src/frontend/styles/landing.scss
@@ -1,5 +1,13 @@
+@use "sass:map";
+
 $dark-overlay: rgba(0, 0, 0, 0.6);
 $dark-red: rgb(173, 12, 12);
+
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+$breakpoint-xxl: 1400px;
 
 // LANDING HEADER
 
@@ -20,6 +28,16 @@ $dark-red: rgb(173, 12, 12);
 }
 .activated {
   background: $dark-red;
+}
+
+.navbar-modal-header {
+  font-size: 26px;
+  font-weight: 400;
+  color: $dark-red;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .landing-header {
@@ -97,36 +115,14 @@ $dark-red: rgb(173, 12, 12);
 
 .contact-form-section {
   background-image: linear-gradient(white, rgb(0, 0, 0));
-  min-height: 500px;
-}
+  min-height: 700px;
 
-.product-scroller {
-  position: relative;
-  z-index: 2;
-  overflow-y: hidden;
-
-  nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-
-    margin-bottom: -10px;
+  .contact-form {
+    height: 5%;
   }
 
-  .product-img {
-    height: 12rem;
-    width: 7rem;
-  }
-
-  &::-webkit-scrollbar {
-    display: none;
-    width: 0;
-    background: transparent;
+  @media screen and (min-width: $breakpoint-lg) {
+    min-height: 700px;
   }
 }
 
@@ -135,6 +131,86 @@ $dark-red: rgb(173, 12, 12);
 }
 
 .products-section {
-  min-height: 400px;
-  margin-top: 30px;
+  .product-scroller {
+    position: relative;
+    z-index: 2;
+    overflow-y: hidden;
+
+    nav {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
+      margin-bottom: -10px;
+
+      .product-image-wrapper {
+        display: inline-block;
+        position: relative;
+        width: 280px;
+      }
+
+      @keyframes placeholder {
+        0% {
+          background-color: #fff;
+        }
+        50% {
+          background-color: #ccc;
+        }
+        100% {
+          background-color: #fff;
+        }
+      }
+
+      .product-image-placeholder {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        animation: placeholder 1s infinite;
+      }
+
+      //       .product-image {
+      //         position: absolute;
+      //         left: 0;
+      //         width: 100%;
+      //         height: 100%;
+      //         object-fit: cover;
+      //       }
+    }
+    &::-webkit-scrollbar {
+      display: none;
+      width: 0;
+      background: transparent;
+    }
+  }
+}
+
+//some CSS
+@media screen and (max-width: $breakpoint-sm) {
+  h3 {
+    font-size: 20px;
+  }
+
+  small {
+    font-size: 12px;
+  }
+
+  .modal-product-image {
+    height: 160px;
+    width: 160px;
+  }
+}
+
+.modal-header {
+  button {
+    background: $dark-red;
+    border: 1px solid gray;
+    color: white;
+    border-radius: 6px;
+  }
 }
