--- a/src/frontend/styles/landing.scss
+++ b/src/frontend/styles/landing.scss
@@ -199,11 +199,6 @@ $breakpoint-xxl: 1400px;
   small {
     font-size: 12px;
   }
-
-  .modal-product-image {
-    height: 160px;
-    width: 160px;
-  }
 }
 
 .modal-header {
@@ -212,5 +207,48 @@ $breakpoint-xxl: 1400px;
     border: 1px solid gray;
     color: white;
     border-radius: 6px;
+  }
+}
+
+.img-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.darkred-badge {
+  background: $dark-red;
+  color: white;
+}
+
+.modal-product-image {
+  height: 250px;
+  width: 250px;
+  margin: 0 auto;
+  display: inline-block;
+  position: relative;
+
+  @media screen and (max-width: $breakpoint-sm) {
+    height: 160px;
+    width: 160px;
+  }
+  @media screen and (max-width: $breakpoint-lg) {
+    width: 180px;
+    height: 180px;
+  }
+}
+
+.modal-product-image-wrapper {
+  position: relative;
+  width: 250px;
+
+  @media screen and (max-width: $breakpoint-sm) {
+    width: 160px;
+  }
+
+  @media screen and (max-width: $breakpoint-lg) {
+    width: 180px;
   }
 }
